@@ -16,10 +16,10 @@ using MelonLoader;
 [assembly: AssemblyVersion(TestMod.BuildInfo.Version)]
 [assembly: AssemblyFileVersion(TestMod.BuildInfo.Version)]
 [assembly: NeutralResourcesLanguage("en")]
-[assembly: MelonModInfo(TestMod.BuildInfo.Name, TestMod.BuildInfo.Version, TestMod.BuildInfo.Author, TestMod.BuildInfo.DownloadLink)]
+[assembly: MelonModInfo(typeof(TestMod.TestMod), TestMod.BuildInfo.Name, TestMod.BuildInfo.Version, TestMod.BuildInfo.Author, TestMod.BuildInfo.DownloadLink)]
 
 
-// Create and Setup a MelonModGameAttribute to mark a Mod as Universal or Compatible with specific Games.
-// If no MelonModGameAttribute is found or any of the Values for any MelonModGameAttribute on the Mod is null or empty it will be assumed the Mod is Universal.
-// Values for MelonModGameAttribute can be found in the Game's app.info file or printed at the top of every log directly beneath the Unity version.
-[assembly: MelonModGameAttribute(null, null)]
+// Create and Setup a MelonModGame to mark a Mod as Universal or Compatible with specific Games.
+// If no MelonModGameAttribute is found or any of the Values for any MelonModGame on the Mod is null or empty it will be assumed the Mod is Universal.
+// Values for MelonModGame can be found in the Game's app.info file or printed at the top of every log directly beneath the Unity version.
+[assembly: MelonModGame(null, null)]
